commit before removing BIJECTION

--- a/src/Makefile
+++ b/src/Makefile
@@ -40,10 +40,10 @@ RC_OBJS := $(patsubst %.c,%.o,$(RC_SRCS))
 all: ppmc decomp
 
 ppmc: $(RC_OBJS) $(OBJS) PPMC/ppmc.o
-	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o $@
+	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 	
 decomp: $(RC_OBJS) $(OBJS) PPMC/decomp.o
-	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o $@
+	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 
 .PHONY: all clean
 
