removed unecessary features of compression

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 prefix=/usr/local
 
-CPPFLAGS	= -std=c++0x -g -O2 -Wno-unused-result
+CPPFLAGS	= -std=c++0x -g -O2 -Wno-unused-result -fno-stack-protector
 INCFLAGS	= -I ./ 
 LIBS		= -lgeos -lspatialindex -lboost_program_options -lstdc++ -lgmp -lmpfr -lpthread
 CGALFLAGS	= -lCGAL -Wl,-rpath
@@ -23,8 +23,6 @@ CXX = g++
 #compile all the cpp files
 SRCS := $(wildcard */*.cpp)
 OBJS := $(patsubst %.cpp,%.o,$(SRCS))
-OBJS := $(filter-out PPMC/ppmc.o, $(OBJS))
-OBJS := $(filter-out PPMC/decomp.o, $(OBJS))
 
 %.o: %.cpp
 	$(CXX) $(INCFLAGS) $(CPPFLAGS) -c $? -o $@
@@ -36,15 +34,28 @@ RC_OBJS := $(patsubst %.c,%.o,$(RC_SRCS))
 %.o: %.c
 	$(CC) $(INCFLAGS) -c $? -o $@
 
+PPMC_SRCS := $(wildcard PPMC/*.cpp)
+PPMC_OBJS := $(patsubst %.cpp,%.o,$(PPMC_SRCS))
 
-all: ppmc decomp
+TRIANGLE_SRCS := $(wildcard triangle/*.cpp)
+TRIANGLE_OBJS := $(patsubst %.cpp,%.o,$(TRIANGLE_SRCS))
 
-ppmc: $(RC_OBJS) $(OBJS) PPMC/ppmc.o
+
+all: compress decompress triangle test
+
+compress: $(RC_OBJS) $(PPMC_OBJS) test/compress.o
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 	
-decomp: $(RC_OBJS) $(OBJS) PPMC/decomp.o
+decompress: $(RC_OBJS) $(PPMC_OBJS) test/decompress.o
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 
+
+triangle: $(TRIANGLE_OBJS) $(PPMC_OBJS) $(RC_OBJS) test/Triangle_Compute.o
+	$(CXX) $^ $(INCFLAGS) $(CPPFLAGS) $(LIBS) $(CGALFLAGS) -o ../build/$@
+	
+test: test/test.o
+	$(CXX) $^ $(INCFLAGS) $(CPPFLAGS) -o ../build/$@
+	
 .PHONY: all clean
 
 clean:
