partition polyhedron based on the skeleton points

--- a/src/Makefile
+++ b/src/Makefile
@@ -45,9 +45,8 @@ RC_OBJS := $(patsubst %.c,%.o,$(RC_SRCS))
 PPMC_SRCS := $(wildcard PPMC/*.cpp)
 PPMC_OBJS := $(patsubst %.cpp,%.o,$(PPMC_SRCS))
 
-TRIANGLE_SRCS := $(wildcard triangle/*.cpp)
-TRIANGLE_OBJS := $(patsubst %.cpp,%.o,$(TRIANGLE_SRCS))
-
+SPATIAL_SRCS := $(wildcard spatial/*.cpp)
+SPATIAL_OBJS := $(patsubst %.cpp,%.o,$(SPATIAL_SRCS))
 
 all: compress decompress triangle test skeleton
 
@@ -57,9 +56,8 @@ compress: test/compress.o $(RC_OBJS) $(PPMC_OBJS)
 decompress: test/decompress.o $(RC_OBJS) $(PPMC_OBJS) 
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 
-skeleton: test/skeleton.o index/Skeleton.o $(RC_OBJS) $(PPMC_OBJS)
+skeleton: test/skeleton.o $(SPATIAL_OBJS) $(RC_OBJS) $(PPMC_OBJS)
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
-
 
 
 triangle:  test/Triangle_Compute.o triangle/TriDist_cu.o triangle/TriDist.o $(PPMC_OBJS) $(RC_OBJS)
