--- a/src/Makefile
+++ b/src/Makefile
@@ -113,7 +113,8 @@ adjust: test/adjust_polyhedron.o $(SPATIAL_OBJS) $(RC_OBJS) $(PPMC_OBJS)
 	
 boxes: test/get_boxes.o $(SPATIAL_OBJS) $(STORAGE_OBJS) $(INDEX_OBJS) $(RC_OBJS) $(PPMC_OBJS) 
 	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(LIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
-
+protruding: test/protrudingtest.o $(SPATIAL_OBJS) $(RC_OBJS) $(PPMC_OBJS) 
+	$(CXX) -DCGAL_USE_GMP -DCGAL_USE_MPFR -frounding-math $^ $(INCFLAGS) $(SLIBS) $(CGALFLAGS) $(CPPFLAGS) -o ../build/$@
 
 test: test/test.o
 	$(CXX) $^ $(INCFLAGS) $(CPPFLAGS) -o ../build/$@
